--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
 	// 애플리케이션 테스트를 위한 다양한 테스트 도구를 제공하는 test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // validation 을 위한 라이브러리 추가
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// 반복적인 코드를 줄여주는 annotation 기반의 코드 생성을 돕는 lombok
     compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
 	// mysql과 java 애플리케이션을 연결하는 jdbc 라이브러리
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // jwt 활용
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
+
 }
 
 tasks.named('test') {
