--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // validation 을 위한 라이브러리 추가
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
+    // web-socket 통신
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	// 반복적인 코드를 줄여주는 annotation 기반의 코드 생성을 돕는 lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -47,6 +48,11 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
+
+    // firebase sdk
+    implementation 'com.google.firebase:firebase-admin:6.8.1'
+    // okhttp
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
 
 }
 
